# ESP32-S3-Based-Nutritional-Collocation-Robot

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  lv_conf.h  partitions_custom.csv  sdkconfig
components/FT6336U_TOUCH/: CMakeLists.txt
components/HTTP/: CMakeLists.txt  http.c  http.html
components/IIC/: CMakeLists.txt
components/LVGL_UI/: CMakeLists.txt  lvgl_ui.c
components/SPI/: CMakeLists.txt
components/ST7789V_LCD/: CMakeLists.txt  lcd.c
components/WIFI/: CMakeLists.txt  wifi.c
components/ctl_mutex/: CMakeLists.txt  ctl_mutex.c
components/ctl_mutex/include/: ctl_mutex.h
components/esc_controller/: CMakeLists.txt  esc_controller.c
components/esc_controller/include/: esc_controller.h
components/function/: CMakeLists.txt  function.c
components/function/include/: function.h
components/gpiowork/: CMakeLists.txt  gpiowork.c
components/gpiowork/include/: gpiowork.h
components/json/: CMakeLists.txt
components/ledc_pwm/: CMakeLists.txt  ledc_pwm.c
components/ledc_pwm/include/: ledc_pwm.h
components/opus/: CMakeLists.txt  config.h
components/servo/: CMakeLists.txt  servo.c
components/servo/include/: servo.h
components/servo2/: CMakeLists.txt  servo2.c
components/servo2/include/: servo2.h
components/stepper/: CMakeLists.txt  stepper.c
components/stepper/include/: stepper.h
components/ui/: CMakeLists.txt  action.cpp  actions.h  eez-flow.h  fonts.h  screens.c  screens.h  ui.c  ui.h  ui_font_my_character_14.c  vars.cpp  vars.h
components/xiaozhi/: CMakeLists.txt  lang_config.cc  system_info.cc  system_info.h  wss_client.c  wss_client.h  xiaozhi.cc
components/xiaozhi/audio/: audio_codec.h  audio_service.cc  audio_service.h  wake_word.h
components/xiaozhi/audio/codecs/: no_audio_codec.cc  no_audio_codec.h
components/xiaozhi/audio/processors/: afe_audio_processor.cc
components/xiaozhi/audio/wake_words/: afe_wake_word.cc  afe_wake_word.h
components/xiaozhi/include/: xiaozhi.h
main/: CMakeLists.txt  idf_component.yml  project.c
server/: README.md
server/main/digital-human/: README.md  index.html  start.py
server/main/digital-human/css/: index.css
server/main/digital-human/js/: app.js
server/main/digital-human/js/config/: manager.js
server/main/digital-human/js/ui/: controller.js
server/main/digital-human/wakeword_runtime/: config.json  requirements.txt
server/main/manager-web/: .env  vue.config.js
server/main/manager-web/src/: main.js
server/main/xiaozhi-server/: agent-base-prompt.txt  app.py  config.yaml  docker-compose.yml  requirements.txt
server/main/xiaozhi-server/config/: config_loader.py  logger.py  manage_api_client.py
server/main/xiaozhi-server/core/: connection.py  websocket_server.py
server/main/xiaozhi-server/data/: .config.yaml  .wakeup_words.yaml
server/main/xiaozhi-server/performance_tester/: performance_tester_asr.py  performance_tester_stream_asr.py  performance_tester_tts.py
server/main/xiaozhi-server/plugins_func/: register.py
server/nutrition-service/data/: nutrition.db
(+225 files in other folders)
